--- a/package.json
+++ b/package.json
@@ -8,12 +8,52 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~43.0.0",
+    "@expo-google-fonts/poppins": "^0.2.0",
+    "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.2",
+    "@react-native-community/slider": "4.1.7",
+    "@react-native-picker/picker": "2.1.0",
+    "@react-navigation/bottom-tabs": "^5.11.10",
+    "@react-navigation/material-top-tabs": "^5.3.15",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
+    "axios": "^0.21.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "^1.2.1",
+    "expo-document-picker": "~10.0.3",
+    "expo-file-system": "~13.0.3",
+    "expo-font": "~10.0.3",
+    "expo-media-library": "~13.0.3",
+    "expo-notifications": "~0.13.3",
+    "expo-permissions": "~13.0.3",
+    "expo-print": "~11.0.3",
+    "expo-screen-orientation": "~4.0.3",
+    "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
+    "lodash": "^4.17.21",
+    "native-base": "^3.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.2",
-    "react-native-web": "0.17.1"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-43.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
+    "react-native-reanimated": "^2.2.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
+    "react-native-tab-view": "2.16.0",
+    "react-native-web": "0.17.1",
+    "react-native-windows": "^0.64.6",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.0",
+    "styled-components": "^5.3.3",
+    "styled-system": "^5.1.5",
+    "unimodules-permissions-interface": "^6.1.0",
+    "validator": "^13.6.0",
+    "voca": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
