--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-document-picker": "~10.0.3",
     "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
     "expo-media-library": "~13.0.3",
     "expo-notifications": "~0.13.3",
     "expo-permissions": "~13.0.3",
@@ -33,6 +34,7 @@
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "lodash": "^4.17.21",
+    "mime": "^3.0.0",
     "native-base": "^3.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -44,6 +46,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "2.16.0",
+    "react-native-textinput-effects": "^0.6.2",
     "react-native-web": "0.17.1",
     "react-native-windows": "^0.64.6",
     "react-redux": "^7.2.6",
