--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "6.0.2",
     "@react-native-community/slider": "4.1.7",
@@ -19,17 +20,22 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@unimodules/core": "~7.2.0",
     "axios": "^0.21.4",
+    "date-fns": "^2.25.0",
     "expo": "^43.0.0",
     "expo-app-loading": "^1.2.1",
     "expo-document-picker": "~10.0.3",
     "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
+    "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
+    "expo-image-picker-multiple": "^1.4.1",
+    "expo-linear-gradient": "~10.0.3",
     "expo-media-library": "~13.0.3",
     "expo-notifications": "~0.13.3",
     "expo-permissions": "~13.0.3",
-    "expo-print": "~11.0.3",
+    "expo-print": "~11.0.4",
     "expo-screen-orientation": "~4.0.3",
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
@@ -39,7 +45,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-43.tar.gz",
+    "react-native-anchor-carousel": "^4.0.1",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-image-crop-picker": "^0.36.4",
+    "react-native-image-gallery": "^2.1.5",
+    "react-native-images-picker-expo": "^1.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "3.3.2",
