--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "3.5.2",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "6.0.2",
     "@react-native-community/slider": "4.1.7",
     "@react-native-picker/picker": "2.1.0",
@@ -40,6 +40,7 @@
     "expo-sharing": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "lodash": "^4.17.21",
+    "metro-react-native-babel-preset": "^0.66.2",
     "mime": "^3.0.0",
     "native-base": "^3.2.1",
     "react": "17.0.1",
@@ -51,8 +52,9 @@
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-gallery": "^2.1.5",
     "react-native-images-picker-expo": "^1.0.0",
+    "react-native-in-app-notification": "^3.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
-    "react-native-reanimated": "^2.2.3",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
@@ -60,9 +62,12 @@
     "react-native-textinput-effects": "^0.6.2",
     "react-native-web": "0.17.1",
     "react-native-windows": "^0.64.6",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "stream-chat-expo": "^3.10.0",
     "styled-components": "^5.3.3",
     "styled-system": "^5.1.5",
     "unimodules-permissions-interface": "^6.1.0",
