--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.25.0",
     "expo": "^43.0.0",
     "expo-app-loading": "^1.2.1",
+    "expo-camera": "~12.0.3",
     "expo-document-picker": "~10.0.3",
     "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
