--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
+    "react-native-sectioned-multi-select": "^0.9.0",
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "2.16.0",
     "react-native-textinput-effects": "^0.6.2",
