--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-gallery": "^2.1.5",
+    "react-native-image-viewing": "^0.2.1",
     "react-native-images-picker-expo": "^1.0.0",
     "react-native-in-app-notification": "^3.2.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
