--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-sectioned-multi-select": "^0.9.0",
     "react-native-svg": "12.1.1",
+    "react-native-swipe-list-view": "^3.2.9",
     "react-native-tab-view": "2.16.0",
     "react-native-textinput-effects": "^0.6.2",
     "react-native-web": "0.17.1",
