--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-43.tar.gz",
     "react-native-anchor-carousel": "^4.0.1",
     "react-native-elements": "^3.4.2",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-image-crop-picker": "^0.36.4",
     "react-native-image-gallery": "^2.1.5",
