--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "styled-system": "^5.1.5",
     "unimodules-permissions-interface": "^6.1.0",
     "validator": "^13.6.0",
-    "voca": "^1.4.0"
+    "voca": "^1.4.0",
+    "expo-google-app-auth": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
