--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-document-picker": "~10.0.3",
     "expo-file-system": "~13.0.3",
     "expo-font": "~10.0.3",
+    "expo-google-app-auth": "~9.0.0",
     "expo-image-manipulator": "~10.1.2",
     "expo-image-picker": "~11.0.3",
     "expo-image-picker-multiple": "^1.4.1",
@@ -61,6 +62,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-pager-view": "5.4.6",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
@@ -81,8 +83,7 @@
     "styled-system": "^5.1.5",
     "unimodules-permissions-interface": "^6.1.0",
     "validator": "^13.6.0",
-    "voca": "^1.4.0",
-    "expo-google-app-auth": "~9.0.0"
+    "voca": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
