--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@unimodules/core": "~7.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
+    "eslint": "^8.11.0",
     "expo": "^43.0.0",
     "expo-app-loading": "^1.2.1",
     "expo-auth-session": "~3.4.2",
